{"message":"Update file: collection.yml","userId":"1163","fileName":"collection.yml"}

--- a/_about-mk-westwood/collection.yml
+++ b/_about-mk-westwood/collection.yml
@@ -6,6 +6,7 @@ collections:
       - Our Learning Environment.md
       - Our Teaching Staff.md
       - Total MK Curriculum.md
+      - MK Westwood Photo Gallery/2025.md
       - MK Westwood Photo Gallery/2024.md
       - MK Westwood Photo Gallery/2023.md
       - MK Westwood Photo Gallery/2022.md
