{"message":"Update file: collection.yml","userId":"1163","fileName":"collection.yml"}

--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -7,7 +7,7 @@ collections:
       - Clubs & Societies/.keep
       - Clubs & Societies/English Language, Drama and Debating.md
       - Clubs & Societies/Environmental Science.md
-      - Clubs & Societies/Infocomm Technology (Computing).md
+      - Clubs & Societies/Infocomm and Innovation Club.md
       - Visual & Performing Arts/.keep
       - Visual & Performing Arts/Art and Crafts Club.md
       - Visual & Performing Arts/Brass Band.md
