{"message":"Update file: navigation.yml","userId":"1163","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -76,7 +76,7 @@ links:
     url: /administration/service-providers/
     sublinks:
       - title: Canteen Matters
-        url: https://www.westwoodpri.moe.edu.sg/administration/canteen-matters/school-canteen-advertisement/
+        url: /administration/canteen-matters/school-canteen-advertisement/
       - title: Service Providers
         url: /administration/service-providers/
       - title: Parent Volunteers
