{"message":"Update file: collection.yml","userId":"1163","fileName":"collection.yml"}

--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Philosophy of CCAs.md
       - Clubs & Societies/.keep
-      - Clubs & Societies/English Language, Drama and Debating.md
+      - Clubs & Societies/English Language, Drama & Library Club.md
       - Clubs & Societies/Environmental Science.md
       - Clubs & Societies/Infocomm and Innovation Club.md
       - Visual & Performing Arts/.keep
