--- a/_about-mk-westwood/collection.yml
+++ b/_about-mk-westwood/collection.yml
@@ -14,6 +14,7 @@ collections:
       - MK Westwood Photo Gallery/2020.md
       - MK Westwood Photo Gallery/2019.md
       - MK Westwood Photo Gallery/.keep
+      - Highlights/2025.md
       - Highlights/2024.md
       - Highlights/2023.md
       - Highlights/2022.md
