--- a/_others/collection.yml
+++ b/_others/collection.yml
@@ -2,6 +2,7 @@ collections:
   others:
     output: true
     order:
+      - Little Professors.md
       - School Newsletters.md
       - Booklist for 2025.md
       - 2024 P1 Parents.md
