{"message":"Update file: navigation.yml","userId":"1163","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -110,7 +110,7 @@ links:
       - title: 2024 P1 Parents
         url: /others/2024-p1-parents/
       - title: Little Professors
-        url: /permalink
+        url: /others/little-professors/
       - title: Joy of Learning Flipbook
         url: /others/p1-and-p2-flipbook/
       - title: Highlights
