--- a/_about-westwood/collection.yml
+++ b/_about-westwood/collection.yml
@@ -14,6 +14,7 @@ collections:
       - Our People/Our School Leaders.md
       - Our People/Organization Chart.md
       - Our People/Teaching Staff.md
+      - Westwood Photo Gallery/2025.md
       - Westwood Photo Gallery/.keep
       - Westwood Photo Gallery/Photo and Video Gallery.md
       - Westwood Photo Gallery/2024.md
