{"message":"Update file: collection.yml","userId":"1163","fileName":"collection.yml"}

--- a/_about-mk-westwood/collection.yml
+++ b/_about-mk-westwood/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-mk-westwood:
     output: true
     order:
+      - Open House.md
       - About MK@Westwood.md
       - Our Learning Environment.md
       - Our Teaching Staff.md
