--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -88,6 +88,8 @@ links:
     sublinks:
       - title: About MK @ Westwood
         url: /mk-westwood/
+      - title: Open House
+        url: /about-mk-westwood/open-house/
       - title: Our Learning Environment
         url: /mk-westwood/our-learning-environment/
       - title: Our Teaching Staff
